[gd_scene load_steps=12 format=2]

[ext_resource path="res://Enemy/Wizard/Bolt.gd" type="Script" id=1]
[ext_resource path="res://Material/Special_Effects/Bolt/burning_loop_3.png" type="Texture" id=2]
[ext_resource path="res://Sound/Effect/Bolt/Shadow_Fiend_projectile_launch1.mp3.wav" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 15, 24 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 15, 0, 15, 24 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 30, 0, 15, 24 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 45, 0, 15, 24 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 60, 0, 15, 24 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 75, 0, 15, 24 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Flying",
"speed": 12.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 3.19661
height = 24.6963

[node name="Bolt" type="Area2D"]
scale = Vector2( 1.5, 1.5 )
collision_layer = 8
collision_mask = 6
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = -1.5708
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "Flying"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.5708
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
scale = Vector2( 1.25, 0.25 )

[node name="After_Image_Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="Sound" type="Node" parent="."]

[node name="Target_01" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 3 )
volume_db = -10.0
pitch_scale = 1.5

[node name="Target_02" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 3 )
volume_db = -10.0
pitch_scale = 1.25

[connection signal="body_entered" from="." to="." method="_on_Bolt_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
